ファイルを追加

--- a/style.css
+++ b/style.css
@@ -416,7 +416,7 @@ footer{
 #mission-main{
   height: 496px;
   width: 100%;
-  background-image: url("images\ /mission/mission-main.png");
+  background-image: url("images/mission/mission-main.png");
   background-repeat: no-repeat;
   background-position-y: center;
 }
